--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,1 +1,19 @@
-<h1>Welcome to Django!</h1> 
+
+{% extends 'base.html' %}
+
+{% load static %}
+
+{% block title %} Home {% endblock %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}">
+{% endblock %}
+{% block content %}
+
+<div class="home">
+   <h1>Welcome to Django!</h1>  
+</div>
+
+
+
+{% endblock %}
